Fix xptcinvoke code on AIX when compiling in 64-bit mode. Specifically, passing PRBools through xptcinvoke was broken. Bug 178499: r=jdunn, sr=jst